--- a/src/app/learning/page.module.css
+++ b/src/app/learning/page.module.css
@@ -1,9 +1,10 @@
-.mainScreen {
+.learningPage {
   background: #f9f9f9;
   display: flex;
   max-width: 360px;
   flex-direction: column;
-  align-items: center;
-  padding: 48px 0 16px;
   overflow: hidden;
+  align-items: center;
+  padding: 41px 0;
 }
+
